vercre-holder/tests/snapshots/wallet_cred_def__claims.snap
---
source: vercre-holder/tests/wallet_cred_def.rs
assertion_line: 47
expression: claims
---
credential_definition:
  type:
    - VerifiableCredential
    - EmployeeIDCredential
  credentialSubject:
    address:
      country:
        value_type: string
        display:
          - name: Address
            locale: en-NZ
      locality:
        value_type: string
        display:
          - name: Address
            locale: en-NZ
      region:
        value_type: string
        display:
          - name: Address
            locale: en-NZ
      street_address:
        value_type: string
        display:
          - name: Address
            locale: en-NZ
    email:
      mandatory: true
      value_type: string
      display:
        - name: Email
          locale: en-NZ
    family_name:
      mandatory: true
      value_type: string
      display:
        - name: Family name
          locale: en-NZ
    given_name:
      mandatory: true
      value_type: string
      display:
        - name: Given name
          locale: en-NZ
